<resources>
    <string name="app_name">IMPROVE</string>
    <string name="sgte">Siguiente</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="e_imagen">Imagen no cargada</string>
    <string name="iniciar_Carrito">Iniciar Carrito</string>
    <string name="ver_productos">Ver productos</string>
    <string name="prdcto">Productos</string>>
    <string name="seccion">Seccion XX</string>
    <string name="plus">+</string>
    <string name="agregar_producto">Agregar Producto</string>>
    <string name="nombre">Nombre</string>>
    <string name="precio">Precio</string>>
    <string name="cantidad">Cantidad</string>
    <string name="categoria">Categoria</string>
    <string name="subtotal">Sub-Total</string>
    <string name="aceptar">Aceptar</string>
    <string name="volver">VOlver</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="precio_prod">Precio</string>
    <string name="nombre_prod">Nombre</string>
    <string name="bebidas">Bebidas</string>
    <string name="apellido">Apellido</string>
    <string name="rut">RUT</string>
    <string name="confirm_password">Confirme Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ver">Ver</string>
    <string name="err_user_length">El usuario debe contener mas de 3 letras</string>
    <string name="err_pass_lenght">La password debe tener mas 5 caracteres</string>
    <string name="eliminar">Eliminar</string>
    <string name="ver_user">Ver usuarios</string>
    <string name="proveedor">Proveedor</string>
    <string name="modificar">Modificar</string>
    <string name="habilitar">Habilitar</string>
    <string name="deshabilitar">Deshabilitar</string>
    <string name="stock_producto">Agregar Stock Producto</string>
    <string name="Cambiar"> Cambiar atributos </string>>


</resources>
