<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inicio">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50sp" />

    <Button
        android:id="@+id/btn_productos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/ver_productos" />

    <Button
        android:id="@+id/btn_agregar_producto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/agregar_producto" />

    <Button
        android:id="@+id/btn_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/stock_producto" />

    <Button
        android:id="@+id/btn_ver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:text="@string/ver_user" />


</LinearLayout>