<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inicio_sesion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="235dp"
                android:layout_height="232dp"
                android:layout_gravity="center|center_horizontal"
                android:contentDescription="@string/e_imagen"
                app:srcCompat="@drawable/logo_medium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:gravity="start"
                android:text="@string/nombre_usuario"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10sp"
                android:layout_marginLeft="10sp"
                android:text="@string/password"
                android:textSize="20sp"
                tools:text="@string/password" />

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btn_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/registrar" />

                <Button
                    android:id="@+id/btn_ingresar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#8BC34A"
                    android:text="@string/ingresar" />
            </TableRow>

        </LinearLayout>
    </ScrollView>

</LinearLayout>